Небольшие исправления, добавлены сообщения в лс телеграм